[package]
name = "yonsei-flexible"
version = "0.2.0"
edition = "2021"
authors = ["axect <axect@outlook.kr>"]
description = "Yonsei Flexible Calculator"
repository = "https://github.com/Axect/Yonsei-Flexible"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
readme = "README.md"
keywords = ["yonsei", "flexible", "calculator"]
exclude = ["example.txt"]

[dependencies]
dialoguer = "0.10.2"
dont_disappear = "3.0.1"
